--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
     "jsonwebtoken": "^9.0.3",
